# cmake_tutorial

./: CMakeLists.txt  README.md  configure_file.cpp  configure_file.h.in  hello.cpp
MathFunctions/: CMakeLists.txt  MathFunctions.cpp
build_type/: CMakeLists.txt  README.md
code_generation/: CMakeLists.txt  README.md  configure_file.cpp  configure_file.h.in
compile_flags/: CMakeLists.txt  README.md  main.cpp
cpp_standard/: README.md
cpp_standard/common_method/: CMakeLists.txt
cpp_standard/compile_features/: CMakeLists.txt  main.cpp
cpp_standard/cxx_standard/: CMakeLists.txt
headers/: CMakeLists.txt  README.md  main.cpp
hello_cmake/: CMakeLists.txt  README.md
installing/: CMakeLists.txt  README.md  some_conf_files
shared_library/: CMakeLists.txt  README.md
shared_library/include/: hello.h
shared_library/src/: hello.cpp
static_library/: CMakeLists.txt  README.md
step_1/: CMakeLists.txt  hello.cpp
step_2/: CMakeLists.txt  main.cpp
step_2/lib/: CMakeLists.txt  operations.cpp  operations.hpp
subdirectory/: CMakeLists.txt  README.md  main.cpp
subdirectory/sublib1/: CMakeLists.txt
subdirectory/sublib1/include/: sub1.h
subdirectory/sublib1/src/: sub1.cpp
subdirectory/sublib2/: CMakeLists.txt
subdirectory/sublib2/include/: sub2.h
testing/: CMakeLists.txt  README.md  main.cpp  test.cpp
testing/sum/: sum.cpp  sum.hpp
